--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "axios": "^0.18.0",
         "core-js": "^2.6.5",
         "swiper": "^4.5.0",
         "vant": "^1.6.17",
@@ -15,6 +16,7 @@
         "vue-awesome-swiper": "^3.1.3",
         "vue-marquee-text-component": "^1.1.1",
         "vue-router": "^3.0.3",
+        "vue2-flip-countdown": "^0.5.3",
         "vuex": "^3.0.1"
     },
     "devDependencies": {
