--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "core-js": "^2.6.5",
         "js-md5": "^0.7.3",
         "jsencrypt": "^3.0.0-rc.1",
+        "mand-mobile": "^2.2.4",
+        "postcss-pxtorem": "^4.0.1",
         "swiper": "^4.5.0",
-        "vant": "^1.6.17",
+        "vant": "^2.0.0-beta.3",
         "vue": "^2.6.10",
         "vue-awesome-swiper": "^3.1.3",
         "vue-marquee-text-component": "^1.1.1",
