--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "jsencrypt": "^3.0.0-rc.1",
         "mand-mobile": "^2.2.4",
         "postcss-pxtorem": "^4.0.1",
+        "qrcode": "^1.3.3",
         "qrcodejs2": "0.0.2",
         "swiper": "^4.5.0",
         "vant": "^2.0.0-beta.3",
