--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "stylus": "^0.54.5",
         "stylus-loader": "^3.0.2",
         "uglifyjs-webpack-plugin": "^2.1.2",
+        "vue-clipboard2": "^0.3.0",
         "vue-loader": "^14.2.2",
         "vue-template-compiler": "^2.5.21",
         "vux-loader": "^1.2.9"
