--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "core-js": "^2.6.5",
         "iview": "^3.4.1",
         "jsencrypt": "^3.0.0-rc.1",
+        "postcss-px-to-viewport-opt": "0.0.4",
         "qrcode.vue": "^1.6.2",
         "vue": "^2.6.10",
         "vue-awesome-swiper": "^3.1.3",
