--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "qrcode.vue": "^1.6.2",
         "vue": "^2.6.10",
         "vue-awesome-swiper": "^3.1.3",
+        "vue-page-transition": "^0.2.2",
         "vue-router": "^3.0.3",
         "vuex": "^3.0.1",
         "vux": "^2.9.4"
