--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "axios": "^0.19.0",
         "core-js": "^2.6.5",
+        "extract-text-webpack-plugin": "^4.0.0-beta.0",
         "iview": "^3.4.1",
         "jsencrypt": "^3.0.0-rc.1",
         "postcss-px-to-viewport-opt": "0.0.4",
@@ -23,9 +24,9 @@
     },
     "devDependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-        "@vue/cli-plugin-babel": "^3.6.0",
+        "@vue/cli-plugin-babel": "^3.10.0",
         "@vue/cli-plugin-eslint": "^3.6.0",
-        "@vue/cli-service": "^3.6.0",
+        "@vue/cli-service": "^3.10.0",
         "@vue/eslint-config-prettier": "^4.0.1",
         "babel-eslint": "^10.0.1",
         "babel-plugin-import": "^1.11.0",
