--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-    "name": "lottery-mobile",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
-    },
-    "dependencies": {
-        "axios": "^0.19.0",
-        "core-js": "^2.6.5",
-        "extract-text-webpack-plugin": "^4.0.0-beta.0",
-        "iview": "^3.4.1",
-        "jsencrypt": "^3.0.0-rc.1",
-        "postcss-px-to-viewport-opt": "0.0.4",
-        "qrcode.vue": "^1.6.2",
-        "vue": "^2.6.10",
-        "vue-awesome-swiper": "^3.1.3",
-        "vue-page-transition": "^0.2.2",
-        "vue-router": "^3.0.3",
-        "vuex": "^3.0.1",
-        "vux": "^2.9.4"
-    },
-    "devDependencies": {
-        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-        "@vue/cli-plugin-babel": "^3.10.0",
-        "@vue/cli-plugin-eslint": "^3.10.0",
-        "@vue/cli-service": "^3.10.0",
-        "@vue/eslint-config-prettier": "^4.0.1",
-        "babel-eslint": "^10.0.1",
-        "babel-plugin-import": "^1.11.0",
-        "compression-webpack-plugin": "^2.0.0",
-        "eslint": "^5.16.0",
-        "eslint-plugin-vue": "^5.0.0",
-        "js-md5": "^0.7.3",
-        "less-loader": "^5.0.0",
-        "mini-css-extract-plugin": "^0.6.0",
-        "postcss-px-to-viewport": "^1.1.0",
-        "style-resources-loader": "^1.2.1",
-        "stylus": "^0.54.5",
-        "stylus-loader": "^3.0.2",
-        "uglifyjs-webpack-plugin": "^2.1.2",
-        "vue-clipboard2": "^0.3.0",
-        "vue-loader": "^14.2.2",
-        "vue-template-compiler": "^2.5.21",
-        "vux-loader": "^1.2.9"
-    }
+  "name": "lottery-mobile",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "axios": "^0.19.0",
+    "core-js": "^2.6.5",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "iview": "^3.4.1",
+    "jsencrypt": "^3.0.0-rc.1",
+    "postcss-px-to-viewport-opt": "0.0.4",
+    "qrcode.vue": "^1.6.2",
+    "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-page-transition": "^0.2.2",
+    "vue-router": "^3.0.3",
+    "vuex": "^3.0.1",
+    "vux": "^2.9.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@vue/cli-plugin-babel": "^3.10.0",
+    "@vue/cli-plugin-eslint": "^3.10.0",
+    "@vue/cli-service": "^3.10.0",
+    "@vue/eslint-config-prettier": "^4.0.1",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-import": "^1.11.0",
+    "compression-webpack-plugin": "^2.0.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "js-md5": "^0.7.3",
+    "less": "^3.8.1",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "postcss-px-to-viewport": "^1.1.0",
+    "style-resources-loader": "^1.2.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "vue-cli-plugin-vux": "^3.0.0",
+    "vue-clipboard2": "^0.3.0",
+    "vue-loader": "14.2.3",
+    "vue-template-compiler": "^2.5.21",
+    "vux-loader": "^1.2.9"
+  }
 }
